@@ -1,3 +1,8 @@
+2006-12-05  Mark Grondona <mgrondona@llnl.gov>
+
+	* src/modules/slurm.c : Allow "all" argument to -j to select
+	  all nodes with SLURM jobs as targets.
+
 2006-12-04  Mark Grondona <mgrondona@llnl.gov>
 
 	* configure.ac : Define _POSIX_PTHREAD_SEMANTICS for Solaris
